--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "popper": "^1.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "styled-components": "^5.3.3"
   }
 }
